--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@ li:first-letter {
   margin-right: 5px;
   height: 64px;
   width: 64px;
+  margin-bottom: 30px;
 }
 
 .weather-temperature strong {
@@ -55,6 +56,7 @@ li:first-letter {
   font-size: 64px;
   line-height: 1px;
   font-weight: 400;
+  padding-top: 20px;
 }
 
 .weather-temperature.units {
