--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
 body {
-  font-family: arial, sans-serif;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
 h1 {
-  color: #878787;
-  font-size: 24px;
+  color: black;
+  font-size: 35px;
   font-weight: 100;
   line-height: 28px;
   margin-bottom: 0;
@@ -19,9 +19,8 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
-
-  color: rgb(135, 135, 135);
-  font-size: 16px;
+  color: black;
+  font-size: 20px;
   font-weight: 100;
   line-height: 19px;
 }
@@ -36,23 +35,23 @@ li:first-letter {
 }
 .weather-app {
   padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
+  border: 5px solid green;
+  border-radius: 18px;
 }
 
 .overview {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .weather-temperature img {
   margin-right: 5px;
-  height: 64px;
-  width: 64px;
+  height: 65px;
+  width: 65px;
   margin-bottom: 30px;
 }
 
 .weather-temperature strong {
-  color: rgb(33, 33, 33);
+  color: green;
   font-size: 64px;
   line-height: 1px;
   font-weight: 400;
@@ -61,12 +60,12 @@ li:first-letter {
 
 .weather-temperature.units {
   position: relative;
-  font-size: 16px;
+  font-size: 20px;
   top: -34px;
 }
 
 .weather-temperature .active {
-  color: rgb(33, 33, 33);
+  color: black;
   cursor: default;
 }
 
