--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ h1 {
   font-size: 35px;
   font-weight: 100;
   line-height: 28px;
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 
 ul {
@@ -71,4 +71,31 @@ li:first-letter {
 
 .weather-temperature .active:hover {
   text-decoration: none;
+}
+
+.weather-temperature a {
+  text-decoration: none;
+}
+
+.weather-temperature a:hover {
+  text-decoration: underline;
+}
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: black;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.3;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.3px;
+}
+
+.weather-forecast-temperature {
+  font-size: 13px;
 }
